dreamhouse-app/main/default/objects/Inspection__c/fields/Properties__c.field-meta.xml
<CustomField>
    <fullName>Properties__c</fullName>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>