dreamhouse-app/main/default/objects/Inspection__c/fields/Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Time_Slot__c</fullName>
    <label>Time Slot</label>
    <type>Time</type>
</CustomField>